--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
